--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@prisma/client": "^4.11.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bcrypt": "^5.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "framer-motion": "^10.0.2",
     "next": "13.2.3",
+    "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
@@ -26,6 +28,7 @@
     "react-slick": "^0.29.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "^18.15.1",
     "next-transpile-modules": "^10.0.0",
     "prisma": "^4.11.0",
