--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
-    "framer-motion": "^10.0.2",
+    "framer-motion": "^10.8.5",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
-    "react-icons": "^4.8.0",
-    "react-slick": "^0.29.0"
+    "react-icons": "^4.8.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
