--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "formidable": "^2.1.1",
     "framer-motion": "^10.8.5",
+    "fs": "^0.0.1-security",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
