--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "form-data": "^4.0.0",
     "formidable": "^2.1.1",
     "framer-motion": "^10.8.5",
     "fs": "^0.0.1-security",
