--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@premieroctet/next-crud": "^2.2.0",
     "@prisma/client": "^4.11.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "bcrypt": "^5.1.0",
@@ -28,7 +29,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
