--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@premieroctet/next-crud": "^2.2.0",
     "@prisma/client": "^4.11.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@tanstack/react-query": "^4.28.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "bcrypt": "^5.1.0",
@@ -30,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-query": "^3.39.3",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
   },
