--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.1",
+    "@christopherpickering/react-leaflet-markercluster": "^1.1.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@premieroctet/next-crud": "^2.2.0",
@@ -25,12 +26,15 @@
     "formidable": "^2.1.1",
     "framer-motion": "^10.8.5",
     "fs": "^0.0.1-security",
+    "leaflet": "^1.9.3",
+    "leaflet.markercluster": "^1.5.3",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1"
