--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "socket.io": "^4.6.1",
-    "socket.io-client": "^4.6.1"
+    "socket.io-client": "^4.6.1",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
