--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.19",
     "@chakra-ui/react": "^2.5.1",
     "@christopherpickering/react-leaflet-markercluster": "^1.1.0",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@premieroctet/next-crud": "^2.2.0",
     "@prisma/client": "^4.11.0",
-    "@reduxjs/toolkit": "^1.9.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.28.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -28,6 +29,7 @@
     "fs": "^0.0.1-security",
     "leaflet": "^1.9.3",
     "leaflet.markercluster": "^1.5.3",
+    "moment": "^2.29.4",
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
@@ -36,6 +38,7 @@
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
+    "react-redux": "^8.0.5",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
     "yup": "^1.1.1"
