--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.3",
     "@types/node": "^18.15.1",
     "next-transpile-modules": "^10.0.0",
     "prisma": "^4.11.0",
