--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "bcrypt": "^5.1.0",
+    "chart.js": "^2.9.4",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "form-data": "^4.0.0",
@@ -33,6 +34,7 @@
     "next": "13.2.3",
     "next-auth": "^4.20.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
     "react-icons": "^4.8.0",
